<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="start"
        android:padding="30dp"
        android:text="@string/go"
        android:textColor="#004D40"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_red_light"
            android:backgroundTint="#CDDC39"
            android:padding="10dp"
            android:text="@string/timerTextView"
            android:textSize="34sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/qeustionTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:background="#4CAF50"
            android:padding="10dp"
            android:text="@string/scoreTextView"
            android:textSize="34sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/qeustionTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/qeustionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="165dp"
            android:text="@string/questionsTextView"
            android:textSize="34sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/correctTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="178dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="176dp"
            android:text="@string/correctTextView"
            android:textSize="34sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:onClick="playAgain"
            android:text="@string/playAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correctTextView" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="302dp"
            android:layout_height="292dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:visibility="visible"
            app:columnCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.587"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372"
            app:rowCount="2">


            <Button
                android:id="@+id/answerButton0"
                android:backgroundTint="@color/design_default_color_error"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/button1"
                android:textColor="#66BB6A"
                android:textSize="60sp"
                android:visibility="visible"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/answerButton1"
                android:backgroundTint="#8A2548"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/button2"
                android:textColor="#000000"
                android:textSize="60sp"
                android:visibility="visible"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />


            <Button
                android:id="@+id/answerButton2"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/button3"
                android:textColor="#5D4037"
                android:textSize="60sp"
                android:visibility="visible"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />


            <Button
                android:id="@+id/answerButton3"
                android:backgroundTint="@color/teal_700"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/button4"
                android:textColor="#69F0AE"
                android:textSize="60sp"
                android:visibility="visible"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />


        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>